# SLIP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  slip.c  slip.h  test_slip.c
docs/: README.md  decoder.plantuml
images/: slip.xmind  temp.drawio
src/: slip.c  slip.h
tests/: CMakeLists.txt  README.md  test.cpp  test_slip.c
